# clitools

./: .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  readme.md
.github/actions-rs/: grcov.yml
.github/workflows/: rust.yml
src/: cslice.rs  frequency.rs  unique.rs  utils.rs
tests/: cslice_tests.rs  frequency_tests.rs  unique_tests.rs
