[package]
name = "cliutils"
version = "0.1.0"
authors = ["Mike Cutalo <mcutalo88@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"

[[bin]]
name = "frequency"
path = "src/frequency.rs"

[[bin]]
name = "unique"
path = "src/unique.rs"

[[bin]]
name = "cslice"
path = "src/cslice.rs"
